Do most of the rendering ourselves to avoid having default tooltips be cropped in short heatmaps; add an example page to reproduce this behaviour

--- a/src/manipulate/tooltips/TooltipStateManager.less
+++ b/src/manipulate/tooltips/TooltipStateManager.less
@@ -2,3 +2,7 @@
   opacity: 0.5;
   pointer-events: none;
 }
+
+.highcharts-container {
+  overflow: visible !important;
+}
